--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html lang="en">
+    <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flapBall</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-<body>
+    </head>
+    <body>
     <!-- // <h1 id="name">Stark</h1> -->
     <!-- <img src="assets/ball.png" id="ball"> -->
      <div id="gameContainer">
